--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^12.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.0"
   }
 }
